test/files/neg/bug835.check
bug835.scala:2: error: `)' expected
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
                                         ^
one error found
